--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,11 @@
 /* BASE STYLES */
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+
 html,
 body {
     height: 100%;
@@ -19,9 +26,15 @@ main {
 }
 
 .container {
+    width: 100%;
     max-width: 1100px;
     margin: 0 auto;
     padding: 0 1rem;
+}
+
+section {
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
 
 /* HEADER STYLES */
